# h2m-public

./: 2_murine_mutation_database.ipynb  3_case_study.ipynb  CLEANED_MBES2_input.ipynb  CLEANED_generate_MBES2.ipynb  MBES2_input.ipynb  README.md  clinvar_reader.py  example.ipynb  h2m_package_tutorial.ipynb  h2m_package_tutorial.md  readthedocs.yaml  requirements.txt
2_run_base_editing/: input_split.ipynb
2_run_h2m_murine_mutation_database/: h2m_config_aacr.txt  h2m_config_clinvar.txt  h2m_config_cosmic.txt  input_split.ipynb  task.sh  task_aacr.py
figure_generation/: extended_figure2.ipynb  extended_figure3.ipynb  extended_figure4.ipynb  extended_figure5.ipynb  extended_figure6.ipynb  figure1.ipynb  figure2.ipynb  figure2_old.ipynb  figure3.ipynb  figure4.ipynb  figure5.ipynb
h2m-package/: README.md  pyproject.toml
h2m-package/source/: about.md  conf.py  documentation.md  downstream.md  index.md  quickstart.md
h2m-package/source/css/: custom.css
h2m-package/src/bioh2m/Data/: dict_tx_h.json  homo_dict.json  homo_dict_mouse.json  human_name_dict.json
h2m-package/src/h2m/: module.py
h2m-package/src/h2m/Data/: dict_tx_h.json  dict_tx_m.json
install-wheels/: h2m-0.1.1-py3-none-any.whl  h2m-1.0.1-py3-none-any.whl  h2m-1.0.2-py3-none-any.whl  h2m-1.0.3-py3-none-any.whl  h2m-1.0.4-py3-none-any.whl  mini-h2m-0.1.1-py3-none-any.whl  mini-h2m-1.0.1-py3-none-any.whl
manuscript-analysis/: 1_h2m_package_tutorial.ipynb  3_case_study.ipynb  3_case_study_part_visualization.Rmd  figure2.ipynb
manuscript-analysis/2_murine_mutation_database/: 2.1_murine_mutation_database.ipynb  2.4.1_stata_anno_env.ipynb  2_murine_mutation_database.ipynb  2_sample_run_show_sequence.ipynb  final_visualization.Rmd
manuscript-analysis/2_murine_mutation_database/2_run_base_editing/: h2m_db.py  input_split.ipynb  output.vcf  run_base.ipynb
manuscript-analysis/2_murine_mutation_database/2_run_h2m_murine_mutation_database/: input_split.ipynb
methods/: gencode_annotation.ipynb  h2m_database.ipynb  library_design.ipynb  neoantigen.ipynb  orthologs_canonical_tx.ipynb  paralog.ipynb  sift.ipynb  stat_env.yml
methods/run_h2m/: h2m_db.py  h2m_db.txt  h2m_env.yml  input_split.ipynb  library_design.ipynb  run_addon.ipynb
(+3 files in other folders)
